Add some more tests to cover the HUDControl app logic

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,5 @@ cmake/
 .mxproject
 
 # CppUTest build artifacts
-Tests/*.o
-Tests/menu_state_machine_test
-Tests/*_test
+Tests/build/
 Tests/CppUTest
