Add some testing around the CAN infrastructure

--- a/Tests/Makefile
+++ b/Tests/Makefile
@@ -33,7 +33,7 @@ CFLAGS += -Wall -Wextra -std=c11 -g
 LD_LIBRARIES = $(CPPUTEST_BUILD)/src/CppUTest/libCppUTest.a $(CPPUTEST_BUILD)/src/CppUTestExt/libCppUTestExt.a -lstdc++ -lpthread
 
 # Test targets
-TESTS = $(BUILD_DIR)/menu_state_machine_test $(BUILD_DIR)/hudcontrol_test $(BUILD_DIR)/flash_test
+TESTS = $(BUILD_DIR)/menu_state_machine_test $(BUILD_DIR)/hudcontrol_test $(BUILD_DIR)/flash_test $(BUILD_DIR)/transciever_test $(BUILD_DIR)/divecan_test
 
 # Source files - Menu State Machine
 MENU_STATE_MACHINE_SRC = $(CORE_SRC)/menu_state_machine.c
@@ -50,10 +50,22 @@ FLASH_SRC = $(CORE_SRC)/Hardware/flash.c
 FLASH_TEST_SRC = flash/FlashTest.cpp
 FLASH_MOCK_SRC = $(MOCKS_DIR)/MockFlash.cpp $(MOCKS_DIR)/MockErrors.cpp
 
+# Source files - Transciever
+TRANSCIEVER_SRC = $(CORE_SRC)/DiveCAN/Transciever.c
+TRANSCIEVER_TEST_SRC = Transciever/TranscieverTest.cpp
+TRANSCIEVER_MOCK_SRC = $(MOCKS_DIR)/MockCAN.cpp $(MOCKS_DIR)/MockErrors.cpp $(MOCKS_DIR)/queue.cpp
+
+# Source files - DiveCAN
+DIVECAN_SRC = $(CORE_SRC)/DiveCAN/DiveCAN.c $(CORE_SRC)/DiveCAN/Transciever.c
+DIVECAN_TEST_SRC = DiveCAN/DiveCANTest.cpp
+DIVECAN_MOCK_SRC = $(MOCKS_DIR)/MockCAN.cpp $(MOCKS_DIR)/MockErrors.cpp $(MOCKS_DIR)/MockPower.cpp $(MOCKS_DIR)/queue.cpp $(MOCKS_DIR)/printer.cpp
+
 # Object files
 MENU_STATE_MACHINE_OBJS = $(BUILD_DIR)/menu_state_machine.o $(BUILD_DIR)/MenuStateMachineTest.o $(BUILD_DIR)/MockHAL.o
 HUDCONTROL_OBJS = $(BUILD_DIR)/HUDControl.o $(BUILD_DIR)/HUDControlTest.o $(BUILD_DIR)/MockQueue.o $(BUILD_DIR)/MockLEDs.o $(BUILD_DIR)/MockHAL.o
 FLASH_OBJS = $(BUILD_DIR)/flash.o $(BUILD_DIR)/FlashTest.o $(BUILD_DIR)/MockFlash.o $(BUILD_DIR)/MockErrors.o
+TRANSCIEVER_OBJS = $(BUILD_DIR)/Transciever.o $(BUILD_DIR)/TranscieverTest.o $(BUILD_DIR)/MockCAN.o $(BUILD_DIR)/MockErrors.o $(BUILD_DIR)/queue.o
+DIVECAN_OBJS = $(BUILD_DIR)/DiveCAN.o $(BUILD_DIR)/Transciever_divecan.o $(BUILD_DIR)/DiveCANTest.o $(BUILD_DIR)/MockCAN.o $(BUILD_DIR)/MockErrors.o $(BUILD_DIR)/MockPower.o $(BUILD_DIR)/queue.o $(BUILD_DIR)/printer.o
 
 .PHONY: all clean clean_all test verbose_test list_tests
 
@@ -62,7 +74,7 @@ all: $(TESTS)
 $(BUILD_DIR):
 	mkdir -p $(BUILD_DIR)
 
-# Build CppUTest libraries if they don't exist
+# Build CppUTest libraries if they don' exist
 $(CPPUTEST_LIBS):
 	@echo "Building CppUTest libraries..."
 	@mkdir -p $(CPPUTEST_BUILD)
@@ -77,6 +89,12 @@ $(BUILD_DIR)/hudcontrol_test: $(HUDCONTROL_OBJS) | $(CPPUTEST_LIBS)
 	$(CXX) $^ -o $@ $(LD_LIBRARIES)
 
 $(BUILD_DIR)/flash_test: $(FLASH_OBJS) | $(CPPUTEST_LIBS)
+	$(CXX) $^ -o $@ $(LD_LIBRARIES)
+
+$(BUILD_DIR)/transciever_test: $(TRANSCIEVER_OBJS) | $(CPPUTEST_LIBS)
+	$(CXX) $^ -o $@ $(LD_LIBRARIES)
+
+$(BUILD_DIR)/divecan_test: $(DIVECAN_OBJS) | $(CPPUTEST_LIBS)
 	$(CXX) $^ -o $@ $(LD_LIBRARIES)
 
 $(BUILD_DIR)/menu_state_machine.o: $(MENU_STATE_MACHINE_SRC) | $(BUILD_DIR)
@@ -112,6 +130,33 @@ $(BUILD_DIR)/MockFlash.o: $(MOCKS_DIR)/MockFlash.cpp | $(BUILD_DIR)
 $(BUILD_DIR)/MockErrors.o: $(MOCKS_DIR)/MockErrors.cpp | $(BUILD_DIR)
 	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
 
+$(BUILD_DIR)/Transciever.o: $(TRANSCIEVER_SRC) | $(BUILD_DIR)
+	$(CC) $(CPPFLAGS) $(CFLAGS) -DTESTING_CAN -c $< -o $@
+
+$(BUILD_DIR)/TranscieverTest.o: $(TRANSCIEVER_TEST_SRC) | $(BUILD_DIR)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -DTESTING_CAN -c $< -o $@
+
+$(BUILD_DIR)/MockCAN.o: $(MOCKS_DIR)/MockCAN.cpp | $(BUILD_DIR)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/queue.o: $(MOCKS_DIR)/queue.cpp | $(BUILD_DIR)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/DiveCAN.o: $(CORE_SRC)/DiveCAN/DiveCAN.c | $(BUILD_DIR)
+	$(CC) $(CPPFLAGS) $(CFLAGS) -DTESTING -DTESTING_CAN -c $< -o $@
+
+$(BUILD_DIR)/Transciever_divecan.o: $(CORE_SRC)/DiveCAN/Transciever.c | $(BUILD_DIR)
+	$(CC) $(CPPFLAGS) $(CFLAGS) -DTESTING -DTESTING_CAN -c $< -o $@
+
+$(BUILD_DIR)/DiveCANTest.o: $(DIVECAN_TEST_SRC) | $(BUILD_DIR)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -DTESTING -DTESTING_CAN -c $< -o $@
+
+$(BUILD_DIR)/MockPower.o: $(MOCKS_DIR)/MockPower.cpp | $(BUILD_DIR)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
+
+$(BUILD_DIR)/printer.o: $(MOCKS_DIR)/printer.cpp | $(BUILD_DIR)
+	$(CXX) $(CPPFLAGS) $(CXXFLAGS) -c $< -o $@
+
 test: $(TESTS)
 	@echo "Running menu_state_machine tests..."
 	@$(BUILD_DIR)/menu_state_machine_test -c
@@ -121,6 +166,12 @@ test: $(TESTS)
 	@echo ""
 	@echo "Running flash tests..."
 	@$(BUILD_DIR)/flash_test -c
+	@echo ""
+	@echo "Running Transciever tests..."
+	@$(BUILD_DIR)/transciever_test -c -k
+	@echo ""
+	@echo "Running DiveCAN tests..."
+	@$(BUILD_DIR)/divecan_test -c -k
 
 clean:
 	rm -rf $(BUILD_DIR)
@@ -138,6 +189,12 @@ verbose_test: $(TESTS)
 	@echo ""
 	@echo "Running flash tests with verbose output..."
 	@$(BUILD_DIR)/flash_test -v
+	@echo ""
+	@echo "Running Transciever tests with verbose output..."
+	@$(BUILD_DIR)/transciever_test -v
+	@echo ""
+	@echo "Running DiveCAN tests with verbose output..."
+	@$(BUILD_DIR)/divecan_test -v
 
 list_tests: $(TESTS)
 	@echo "=== menu_state_machine test groups ==="
@@ -148,3 +205,9 @@ list_tests: $(TESTS)
 	@echo ""
 	@echo "=== flash test groups ==="
 	@$(BUILD_DIR)/flash_test -lg
+	@echo ""
+	@echo "=== Transciever test groups ==="
+	@$(BUILD_DIR)/transciever_test -lg
+	@echo ""
+	@echo "=== DiveCAN test groups ==="
+	@$(BUILD_DIR)/divecan_test -lg
